# terraform-ansible-collection

./: .ansible-lint  .ansible-lint-ignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.rst  CI.md  CONTRIBUTING.md  DEVELOPMENT.md  DEVELOPMENT_SETUP.md  GETTING_STARTED.md  INDEX.md  Makefile  PROJECT_PYTFE_IMPLEMENTATION.md  PROJECT_PYTFE_SUMMARY.md  README.md  SETUP_SUMMARY.txt  TESTING_GUIDE_PROJECT.md  TESTING_PROJECT_RESOURCE.md  codecov.yml  conftest.py  devfile.yaml  galaxy.yml  pyproject.toml  requirements.txt  sanity-requirements.txt  sonar-project.properties  test-requirements.txt  tox.ini
.github/workflows/: changelog.yaml  ci.yml  codecoverage.yml  docs.yml  integration-pytfe-branch.yml  integration.yml  linting.yml  release.yml  sonar_checks.yml  tests.yml
changelogs/: .plugin-cache.yaml  changelog.yaml  config.yaml
changelogs/fragments/: agent_pool_module.yml  client.yaml  configuration_version_info_module_addition.yml  docsite_guides.yml  dynamic_inventory_plugin.yml  execution_environment_metadata.yml  fix-idempotent-return-data.yaml  inventory_cache.yml  inventory_multi_workspace.yml  inventory_outputs_hcl_types.yml  inventory_outputs_item_and_auto_ansible_host.yml  inventory_outputs_source.yml  inventory_outputs_terraform_type_vocabulary.yml  inventory_user_agent.yml  invoke-action-addrs-run.yaml  (+41 more)
docs/: hashicorp.terraform.configuration_version_module.rst
meta/: execution-environment.yml  runtime.yml
scripts/: README.md  setup.sh  validate_setup.py
tests/: .gitignore  config.yml
tools/: inspect_collections.py
(+268 files in other folders)
